[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://gui/inv/inv_scene.gd" id="1_1nvof"]
[ext_resource type="PackedScene" path="res://gui/supply/supply_accordion.tscn" id="2_3yk1x"]
[ext_resource type="PackedScene" path="res://gui/inv/equip_list.tscn" id="2_ibgux"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1nvof")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Equipments"
vertical_alignment = 1

[node name="Label2" type="Label" parent="GridContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = " "

[node name="MarginContainer2" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
vertical_alignment = 1

[node name="Label2" type="Label" parent="GridContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "100"

[node name="LeftList" parent="GridContainer" instance=ExtResource("2_ibgux")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightList" parent="GridContainer" instance=ExtResource("2_3yk1x")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
